Trying to fix the annoying white bar when scrolling on iOS
No idea if this solution will actually work, but Stack Overflow says it
will so, y-know…

--- a/outreach.css
+++ b/outreach.css
@@ -62,6 +62,7 @@ border-color: white;
   height: auto;
   z-index: -100;
   top: 0px;
+  transform: translate3d(0,0,0);
 }
 
 div .outreach-brief {
